Fix contrast color for AA  accessibility

--- a/css/less/less_c3rb/variablesc3rb.less
+++ b/css/less/less_c3rb/variablesc3rb.less
@@ -37,7 +37,7 @@
 @text-color:            @gray-dark;
 
 //** Global textual link color.
-@link-color:            darken(@brand-primary, 10%);
+@link-color:            #517704;
 //** Link hover color set via `darken()` function.
 @link-hover-color:      darken(@link-color, 15%);
 //** Link hover decoration.
@@ -777,7 +777,7 @@
 @badge-color:                 #fff;
 //** Linked badge text color on hover
 @badge-link-hover-color:      #fff;
-@badge-bg:                    @gray-light;
+@badge-bg:                    @gray;
 
 //** Badge text color in active nav link
 @badge-active-color:          @link-color;
