--- a/css/less/less_default/bootstrapc3rb.less
+++ b/css/less/less_default/bootstrapc3rb.less
@@ -46,7 +46,7 @@ ul.unstyled {list-style-type: none;  padding: 0px}
 }
 .dropdown-submenu>.dropdown-menu {
     top: 0;
-    left: 100%;
+    left: 100%; 
     margin-top: -6px;
     margin-left: -1px;
     -webkit-border-radius: 0 6px 6px 6px;
@@ -57,7 +57,7 @@ ul.unstyled {list-style-type: none;  padding: 0px}
     display: block;
 }
 .dropdown-submenu>a:after {
-    display: block;
+    display: block; 
     content: " ";
     float: right;
     width: 0;
@@ -122,6 +122,11 @@ a[target="_blank"]:after {
     outline: thin dotted;
     outline-offset: -2px;
 }
+a.evit-lnk {
+    background: #FFFFFF;
+    color: #222222;
+    padding: 10px 15px;
+}
 
 /* Joomla theme */
 .colctre {
@@ -165,7 +170,7 @@ a[target="_blank"]:after {
 }
 /* Article */
 .article-info {
-  color: #666; 
+  color: #111111; 
   font-style: italic;
   font-size: 13px
 }
